[package]
name = "cplink"
version = "0.0.1"
authors = ["Matteo Campanelli <matteo.campanelli@gmail.com>"]
edition = "2018"

[dependencies]
cute = "0.3.0"

accumulator = { path = "./accumulator" }
quick-error = "1.2.3"
rug = "1.7.0"
algebra-core = { path = "./zexe/algebra-core" }
algebra = { path = "./zexe/algebra", features = ["bls12_381"]}
merlin = "2.0.0"
rand = { version = "0.7"}
cpsnarks-set = { path = "./cpsnarks-set" }
rand_xorshift = "0.2"


[dev-dependencies]


[lib]
name = "cplink"
path = "src/lib.rs"

[[bin]]
name = "cplink_bin"
path = "src/bin.rs"
